Steps to reproduce: 1. Open Writer 2. Tools - Development tools 3. Change the height of the toolbar a few times -> The left side widget is gone. Reproduced with GEN but not with GTK3. Also reproduced on windows Reproduced in Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community Build ID: 3453f2f8fce9e69cd9f2a2c6f3d7171b6e59f674 CPU threads: 16; OS: Windows 6.3 Build 9600; UI render: default; VCL: win Locale: en-GB (en_GB); UI: en-US Calc: threaded
Also reproducible if clicking on the Properties tab and then on the Method tab
*** Bug 141460 has been marked as a duplicate of this bug. ***
Gülşah Köse committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/core/commit/f61fcf6fe6b9f54dd57ca5d868b1b0436e9cec61 tdf#141424 Include the margin sizes while calculating width of window. It will be available in 7.2.0. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Gülşah Köse committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/core/commit/6af7691518f24835d600c692bff1dcd66f5e0ced tdf#141424 Include the margin sizes while calculating width of window. It will be available in 7.2.0. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Verified in Version: 7.2.0.0.alpha0+ / LibreOffice Community Build ID: d4f116d9576453f5974eb63db37a33c59ac53bc9 CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: x11 Locale: en-US (en_US.UTF-8); UI: en-US Calc: threaded @Gülşah Köse, thanks for fixing this issue, should it be closed as RESOLVED FIXED ?
*** Bug 141796 has been marked as a duplicate of this bug. ***
Xisco, u'r welcome. I changed the status as resolved fixed. o/