tdf#141424 Include the margin sizes while calculating width of window.

Change-Id: I0863dc62f1ade6cc07835e83eb242f3d5a9906bd